# craftclient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: camera.h  cond.h  face.h  gui.h  image.h  matrix.h  mesh.h  meshtools.h  mineblock.h  object.h  renderstate.h  shader.h  texture.h  vectors.h
libs/craftblock/: CMakeLists.txt  README.md
libs/craftblock/include/: block.h  chunk.h  craftblock.h
libs/craftblock/include/blocks/: blocks.h  builder.h
libs/craftblock/include/geometry/: blockgeom.h  face.h  meshtools.h
libs/craftblock/include/math/: cond.h  matrix.h  vectors.h
libs/craftblock/src/: chunk.cpp  craftblock.cpp
libs/craftblock/src/blocks/: blocks.cpp
libs/craftblock/src/geometry/: blockgeom.cpp  meshtools.cpp
libs/craftblock/src/math/: matrix.cpp  vectors.cpp
libs/glad/include/glad/: gl.h
libs/linmath/: README.md
libs/linmath/include/: linmath.h
libs/protorock/: CMakeLists.txt  README.md
libs/protorock/gotests/: client.go  go.mod  go.sum  raknetserver.go  x509.go
libs/protorock/gotests/proxy/: config.go  proxy.go
libs/protorock/include/: decoder.h  login.h  varint.h
libs/protorock/include/common/: base64.h  common.h  compressor.h  crypto.h  decompressor.h  json.h  objectpool.h
libs/protorock/include/minecraft/: aliases.h  client.h  login.h
libs/protorock/include/oauth2/: live.h  token.h  xbl.h
libs/protorock/include/protocol/: authResult.h  block.h  clientData.h  educationSharedResourceUri.h  error.h  experimentData.h  gameRule.h  identityData.h  item.h  os.h  personaPiece.h  player.h  protocol.h  resourcePack.h  skinAnimation.h  validate.h
libs/protorock/include/protocol/nbt/: tag.h
libs/protorock/include/protocol/packet/: allpackets.h  clientCacheStatus.h  clientToServerHandshake.h  decoder.h  encoder.h  id.h  login.h  packet.h  packetPool.h  playStatus.h  reader.h  resourcePackClientResponse.h  resourcePackStack.h  resourcePacksInfo.h  serverToClientHandshake.h  setLocalPlayerAsInitialized.h  startGame.h  writer.h
libs/protorock/include/raknet/: common.h  datagramQueue.h  message.h  objectpool.h  packet.h  packetQueue.h  raknet.h  recoveryQueue.h  safeQueue.h  state.h  udpClient.h
libs/protorock/include/resources/: skin.h
libs/protorock/src/: login.cpp  protorock.cpp
libs/protorock/src/common/: base64.cpp  compressor.cpp  crypto.cpp  decompressor.cpp  json.cpp  packetbuff.cpp  thread.cpp  uuid.cpp
libs/protorock/src/minecraft/: client.cpp  clientHandlers.cpp  login.cpp
libs/protorock/src/minecraft/packet/: decoder.cpp  encoder.cpp  packetPool.cpp
libs/protorock/src/oauth2/: live.cpp  xbl.cpp
libs/protorock/src/protocol/: clientData.cpp  identityData.cpp  validate.cpp
libs/protorock/src/protocol/nbt/: tag.cpp
libs/protorock/src/raknet/: common.cpp  datagramQueue.cpp  packet.cpp  packetQueue.cpp  raknet.cpp  recoveryQueue.cpp  state.cpp  udpClient.cpp
libs/protorock/testprog/: raktest.cpp  test.cpp
shaders/: fragment.glsl  vertex.glsl
src/: camera.cpp  glad.cpp  gui.cpp  image.cpp  main.cpp  matrix.cpp  mesh.cpp  meshtools.cpp  mineblock.cpp  object.cpp  shader.cpp  texture.cpp  vectors.cpp
